Finalizado conteúdo do HTML

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>FlexBlog</title>
 
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="./css/style.css">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -56,9 +56,118 @@
     </div>
   </main>
 
-  <section>
-
+  <section class="produtos-bg">
+    <div class="container">
+      <h2>Produtos</h2>
+      <ul class="produtos-itens">
+        <li class="purple">
+          <h2>Purple</h2>
+          <img src="./img/produtos1.jpg" alt="">
+        </li>
+        <li class="pink">
+          <h2>Pink</h2>
+          <img src="./img/produtos2.jpg" alt="">
+        </li>
+        <li class="Blue">
+          <h2>Blue</h2>
+          <img src="./img/produtos3.jpg" alt="">
+        </li>
+      </ul>
+    </div>
   </section>
+
+  <article class="preco-bg">
+    <div class="container">
+      <div>
+        <h2>Cobre</h2>
+        <span><sup>R$</sup>19</span>
+        <ul>
+          <li>Planos Ilimitados</li>
+          <li>Acesso Restrito</li>
+          <li>Conteúdo Secreto</li>
+          <li>Acesso Restrito</li>
+          <li>Suporte 24h</li>
+        </ul>
+        <a href="">Comprar</a>
+      </div>
+
+      <div>
+        <h2>Prata</h2>
+        <span><sup>R$</sup>39</span>
+        <ul>
+          <li>Planos Ilimitados</li>
+          <li>Acesso Restrito</li>
+          <li>Conteúdo Secreto</li>
+          <li>Acesso Restrito</li>
+          <li>Suporte 24h</li>
+          <li>Compra Eclusiva</li>
+        </ul>
+        <a href="">Comprar</a>
+      </div>
+
+      <div>
+        <h2>Ouro</h2>
+        <span><sup>R$</sup>79</span>
+        <ul>
+          <li>Planos Ilimitados</li>
+          <li>Acesso Restrito</li>
+          <li>Conteúdo Secreto</li>
+          <li>Acesso Restrito</li>
+          <li>Compra Eclusiva</li>
+          <li>Suporte 24h</li>
+          <li>Compra Eclusiva</li>
+          <li>Download do itens</li>
+        </ul>
+        <a href="">Comprar</a>
+      </div>
+    </div>
+  </article>
+
+  <section class="qualidade-bg">
+    <div class="vantagens container">
+      <ul>
+        <li>
+          <h2>Inteligente</h2>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis nemo ipsum molestias, autem excepturi saepe.</p>
+        </li>
+        <li>
+          <h2>Compacto</h2>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis nemo ipsum molestias, autem excepturi saepe.</p>
+        </li>
+        <li>
+          <h2>Econômico</h2>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis nemo ipsum molestias, autem excepturi saepe.</p>
+        </li>
+        <li>
+          <h2>Transparente</h2>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis nemo ipsum molestias, autem excepturi saepe.</p>
+        </li>
+        <li>
+          <h2>Opaco</h2>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis nemo ipsum molestias, autem excepturi saepe.</p>
+        </li>
+        <li>
+          <h2>Sustentável</h2>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis nemo ipsum molestias, autem excepturi saepe.</p>
+        </li>
+      </ul>
+    </div>
+  </section>
+
+  <section class="newsletter-bg">
+    <div class="newsletter container">
+      <h1>Newsletter</h1>
+      <p>assine e fique por dentro das novidades</p>
+      <form action="" class="newsletter-form">
+        <input type="text" placeholder="Seu melhor e-mail">
+        <button type="submit">Assinar</button>
+      </form>
+    </div>
+  </section>
+
+  <footer class="footer">
+    <p>FlexBlog @ Todos os direitos reservados.</p>
+  </footer>
 </body>
 
 </html>
