Removido a tag Address e add no lugar a tag p do header/info

--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
     <div class="container top-info">
       <p>Seg / Sex - 08:00 ás 18:00</p>
       <a href="tel:+552199999999">+55 21 9 9999-9999</a>
-      <address>
-        Av. Ali perto, 330, BotaFogo - GO
-      </address>
+      <p>Av. Ali perto, 330, BotaFogo - GO</p>
     </div>
 
     <nav aria-label="primaria">
