Adicionado class logo na nav da logo

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <nav aria-label="primaria">
       <div class="container nav-flex">
-        <a href="./index.html">FlexBlog</a>
+        <a class="logo" href="./index.html">FlexBlog</a>
         <ul class="nav-menu">
           <li><a href="#sobre">Sobre</a></li>
           <li><a href="#produtos">Produtos</a></li>
