--- a/index.html
+++ b/index.html
@@ -39,18 +39,19 @@
       <h1>Novos valores e<br>Propriedades de CSS</h1>
 
       <div class="sobre" id="sobre">
-        <h1>Sobre</h1>
-        <p>O que temos que ter sempre em mente é que a determinação clara de objetivos afeta positivamente a correta previsão das condições inegavelmente apropriadas objetivos.</p>
-        <p>O que temos que ter sempre em mente é que a determinação clara de objetivos afeta positivamente a correta previsão das condições inegavelmente apropriadas objetivos.</p>
+        <div class="sobre-info">
+          <h1>Sobre</h1>
+          <p>O que temos que ter sempre em mente é que a determinação clara de objetivos afeta positivamente a correta previsão das condições inegavelmente apropriadas objetivos.</p>
+          <p>O que temos que ter sempre em mente é que a determinação clara de objetivos afeta positivamente a correta previsão das condições inegavelmente apropriadas objetivos.</p>
+        </div>
+        <div class="sobre-img">
+          <img src="img/sobre1.jpg" alt="Sobre 1">
+        </div>
+        <div class="sobre-img">
+          <img src="img/sobre2.jpg" alt="Sobre 2">
+        </div>
       </div>
 
-    </div>
-    <div class="sobre-img">
-      <img src="img/sobre1.jpg" alt="Sobre 1">
-    </div>
-    <div class="sobre-img">
-      <img src="img/sobre2.jpg" alt="Sobre 2">
-    </div>
     </div>
   </main>
 
