--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   </main>
 
   <section class="produtos-bg">
-    <div class="container">
+    <div class="produtos container">
       <h2>Produtos</h2>
       <ul class="produtos-itens">
         <li class="purple">
