Corrigido class/blue da section/produtos para blue com b minusculo

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <h2>Pink</h2>
           <img src="./img/produtos2.jpg" alt="">
         </li>
-        <li class="Blue">
+        <li class="blue">
           <h2>Blue</h2>
           <img src="./img/produtos3.jpg" alt="">
         </li>
