Adicionado nova class no article. Class planos e planos-item

--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
     </div>
   </section>
 
-  <article class="preco-bg">
-    <div class="container">
-      <div>
+  <article class="planos-bg">
+    <div class="planos container">
+      <div class="planos-item">
         <h2>Cobre</h2>
         <span><sup>R$</sup>19</span>
         <ul>
@@ -90,7 +90,7 @@
         <a href="">Comprar</a>
       </div>
 
-      <div>
+      <div class="planos-item">
         <h2>Prata</h2>
         <span><sup>R$</sup>39</span>
         <ul>
@@ -104,7 +104,7 @@
         <a href="">Comprar</a>
       </div>
 
-      <div>
+      <div class="planos-item">
         <h2>Ouro</h2>
         <span><sup>R$</sup>79</span>
         <ul>
