Adicionado nova class neswletter

--- a/index.html
+++ b/index.html
@@ -153,10 +153,12 @@
     </div>
   </section>
 
-  <section class="newsletter-bg">
-    <div class="newsletter container">
+  <section class="newsletter-intro">
+    <div class="newsletter">
       <h1>Newsletter</h1>
       <p>assine e fique por dentro das novidades</p>
+    </div>
+    <div class="newsletter-info">
       <form action="" class="newsletter-form">
         <input type="text" placeholder="Seu melhor e-mail">
         <button type="submit">Assinar</button>
